--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="home-content">
       <div class="text">
         <div class="text-one">Hello,</div>
-        <div class="text-two">I'm Walid Imam</div>
+        <div class="text-two">This is Walid Imam</div>
         <div class="text-three">Professional graphics designer</div>
         <div class="text-four">From Bangladesh</div>
       </div>
@@ -78,7 +78,7 @@
         </div>
         <div class="right">
           <div class="topic">Designing Is My Passion</div>
-          <p>I'm an experianced individual with a keen interest in designing, providing premium services.</p>
+          <p>I'm an experienced individual with a keen interest in designing, providing premium services.</p>
         </div>
       </div>
     </div>
@@ -168,7 +168,7 @@
           delighted to discuss your requirements and explore how my skills and expertise can be utilized to deliver
           high-quality results.</p>
         <div class="button">
-          <button><a href="mailto:adnanhossain093@gmail.com" target="_blank">email me</a></button>
+          <button><a href="mailto:iswalidimam@gmail.com" target="_blank">email me</a></button>
         </div>
       </div>
       <div class="content social-icons">
