--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfolio of Walid Imam" />
-  <meta name="theme-color" content="#00BFFF" />
+  <meta name="theme-color" content="#800020" />
   <meta property="og:title" content="Walid Imam" />
-  <meta property="og:url" content="pic.png" />
+  <meta property="og:url" content="https://walidimamportfolio.netlify.app" />
   <meta property="og:description" content="Portfolio of Walid Imam" />
-  <meta property="og:image" content="pic.png" />
 
   <link rel="shortcut icon" type="image/x-icon" href="pic.png" />
   <link rel="canocial" href="pic.png" size="60x60" />
@@ -92,7 +91,7 @@
         <div class="text">
           <div class="topic">Skills Reflects Our Knowledge</div>
           <p>I possess advanced proficiency in graphics design. I have extensive experience utilizing various
-            software tools such as Adobe Photoshop, Illustrator, Microsoft Word, PowerPoint, and Canva to develop
+            software tools such as <bold>Adobe Photoshop</bold>, <bold>Illustrator</bold>, <bold>Microsoft Word</bold>, <bold>PowerPoint</bold> and <bold>Canva</bold> to develop
             top-notch
             deliverables in this
             domain.</p>
