--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             deliverables in this
             domain.</p>
           <div class="experience">
-            <div class="num">3</div>
-            <div class="exp">Years Of <br> Experience</div>
+            <div class="num">1</div>
+            <div class="exp">Year Of <br> Experience</div>
           </div>
         </div>
       </div>
@@ -152,6 +152,8 @@
         <img src="1.png" alt="Projects image 1">
         <img src="2.png" alt="Projects image 2">
         <img src="3.png" alt="Projects image 3">
+        <img src="4.png" alt="Projects image 4">
+        <img src="5.png" alt="Projects image 5">
       </div>
     </div>
   </section>
